update some select optimize

--- a/app/views/marketing_dashboard/campaign_invites/index.html.erb
+++ b/app/views/marketing_dashboard/campaign_invites/index.html.erb
@@ -129,7 +129,7 @@
 <div class="alert alert-danger" style="display:none;">操作失败，请重试</div>
 
 <div class="container-fluid">
-  <h4 class="pull-right">截图总数: <%= @campaign_invites.count %></h4>
+<!--   <h4 class="pull-right">截图总数: <%= @campaign_invites.count %></h4> -->
   <% if @batch_visible %>
     <button class="choose-all btn btn-default">全选</button>
     <button class="revert-all btn btn-default">反选</button>
