optimize mysql select

--- a/app/views/marketing_dashboard/kols/index.html.erb
+++ b/app/views/marketing_dashboard/kols/index.html.erb
@@ -27,12 +27,12 @@
             <%= f.search_field :email_cont, class: "form-control", placeholder: "KOL邮箱" %>
           </div>
         </div>
-        <div class="col-md-3">
+<!--         <div class="col-md-3">
           <div class="form-group">
             <label>KOL Name</label>
-            <%= f.search_field :name_cont, class: "form-control", placeholder: "KOL昵称" %>
+            <%#= f.search_field :name_cont, class: "form-control", placeholder: "KOL昵称" %>
           </div>
-        </div>
+        </div> -->
         <div class="col-md-3">
           <div class="form-group">
             <label>KOL Level</label>
