update campaign_invite search

--- a/app/views/marketing_dashboard/campaign_invites/index.html.erb
+++ b/app/views/marketing_dashboard/campaign_invites/index.html.erb
@@ -21,12 +21,12 @@
             <%= f.search_field :kol_id_eq, class: "form-control", placeholder: "KOL ID" %>
           </div>
         </div>
-        <div class="col-md-3">
+<!--         <div class="col-md-3">
           <div class="form-group">
             <label>KOL手机</label>
-            <%= f.search_field :kol_mobile_number_cont, class: "form-control", placeholder: "KOL手机" %>
+            <%#= f.search_field :kol_mobile_number_cont, class: "form-control", placeholder: "KOL手机" %>
           </div>
-        </div>
+        </div> -->
 <!--         <div class="col-md-3">
           <div class="form-group">
             <label>KOL昵称</label>
