brand will receive notice if kol quote the custom content

--- a/app/views/user_mailer/new_member.html.erb
+++ b/app/views/user_mailer/new_member.html.erb
@@ -11,7 +11,7 @@ Your verification code is: <font color="#2fccd1"><%= @valid_code %></font> (<fon
 
 If you did not try to sign in to your account, please change your password immediately by visiting your account settings on Robin8.
 
-If you have additional questions about account security, please visit <font color="#2fccd1">robin8.net</font>.
+If you have additional questions about account security, please visit <font color="#2fccd1">robin8search.com</font>.
 
 Thanks for visiting Robin8!
 </font>
