share invite meta

--- a/app/views/layouts/mobile.html.erb
+++ b/app/views/layouts/mobile.html.erb
@@ -12,6 +12,12 @@
     <meta content="black-translucent" name="apple-mobile-web-app-status-bar-style" />
     <meta name="keywords" content="">
     <meta name="description" content="">
+    
+    <meta property="og:type" content="website" />
+    <meta property="og:title" content="<%= t("invite.title") %>" />
+    <meta property="og:description" content="<%= t("invite.description") %>" />
+    <meta property="og:image" content="https://app.robin8.vn/invite.png" />
+    
     <%= csrf_meta_tags %>
     <%= favicon_link_tag 'favicon.ico' %>
     <title>Robin8</title>
