--- a/app/views/pages/invite.html.erb
+++ b/app/views/pages/invite.html.erb
@@ -159,7 +159,7 @@
           element.attr('disabled', true);
 
           counter = setInterval(function() {
-            element.html(countNumber + " (秒)");
+            element.html(countNumber + " (giây)");
             countNumber -= 1;
             if (countNumber < 0) {
               clearInterval(counter);
